Different examples and extensions